--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'todo_task:task_about' %}">About</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'test_response_demo:index' %}">response_demo</a>
+            </li>
             {% if user.is_authenticated %}
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'account_logout' %}">ログアウト</a>
